--- a/debian/changelog
+++ b/debian/changelog
@@ -20,10 +20,12 @@ nvidia-graphics-drivers (352.30-1) UNRELEASED; urgency=medium
       indefinitely in some cases.
     - Fixed a bug that prevented OpenGL from properly recovering from hardware
       errors or sync object waits that had timed out.
+    - Add support for OpenCL 1.2.
   * Add new armhf-only libcuda1 symbols
   * Update nv-readme.ids
   * Refresh patches
   * Updated conftest.h to address removal of NV_DMA_MAPPING_OPS_PRESENT
+  * nvidia-libopencl1: Add Provides: libopencl-1.2-1.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Fri, 31 Jul 2015 23:11:59 +0100
 
