nvidia-detect: Detect stretch as supported suite, and parse -h as --help (from branches/352 r5372)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340@5414 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nvidia-graphics-drivers (340.76-3) UNRELEASED; urgency=medium
+
+  [ Vincent Cheng ]
+  * nvidia-detect: Detect stretch as supported suite, and parse -h as --help.
+    (Closes: #792801)
+
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 02 Aug 2015 19:09:11 +0200
+
 nvidia-graphics-drivers (340.76-2) unstable; urgency=medium
 
   * fixes-for-kernel-4.0.0.patch: New patch to add support for Linux 4.0,
