--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,11 @@ nvidia-graphics-drivers (340.76-3) UNRELEASED; urgency=medium
   * nvidia-detect: Detect stretch as supported suite, and parse -h as --help.
     (Closes: #792801)
 
+  [ Luca Boccassi ]
+  * Fix nvidia-modprobe.conf module unload ordering, to stop nvidia-uvm
+    getting stuck until a second modprobe -r nvidia-current is issued.
+    Fix provided by Jö Fahlke. Thanks! (Closes: #793386)
+
  -- Andreas Beckmann <anbe@debian.org>  Sun, 02 Aug 2015 19:09:11 +0200
 
 nvidia-graphics-drivers (340.76-2) unstable; urgency=medium
