add Luca Boccassi to Uploaders
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340@5416 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,9 @@ nvidia-graphics-drivers (340.76-3) UNRELEASED; urgency=medium
     getting stuck until a second modprobe -r nvidia-current is issued.
     Fix provided by Jö Fahlke. Thanks! (Closes: #793386)
 
+  [ Andreas Beckmann ]
+  * Add Luca Boccassi to Uploaders.
+
  -- Andreas Beckmann <anbe@debian.org>  Sun, 02 Aug 2015 19:09:11 +0200
 
 nvidia-graphics-drivers (340.76-2) unstable; urgency=medium
