--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ nvidia-graphics-drivers (340.76-3) UNRELEASED; urgency=medium
 
   [ Andreas Beckmann ]
   * Add Luca Boccassi to Uploaders.
+  * nvidia-driver, nvidia-kernel-*: Report the latest tested Linux version
+    that can build the kernel module in the package description.
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 02 Aug 2015 19:09:11 +0200
 
