--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,7 @@ nvidia-graphics-drivers (340.76-3) UNRELEASED; urgency=medium
     - Fix conftest.sh function write_cr4.
     - Implement new conftest.sh functions backing_dev_info (346.82),
       phys_to_dma, dma_ops, get_dma_ops, noncoherent_swiotlb_dma_ops (352.09).
+    - Implement new conftest.sh function dma_map_ops (352.30).
     - Reorder conftest.h to match conftest.sh.
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 02 Aug 2015 19:09:11 +0200
