drop obsolete transitional package nvidia-glx
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5424 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (340.76-4) UNRELEASED; urgency=medium
+
+  * Drop obsolete transitional package nvidia-glx.
+
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 02 Aug 2015 23:20:48 +0200
+
 nvidia-graphics-drivers (340.76-3) unstable; urgency=medium
 
   [ Vincent Cheng ]
