--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nvidia-graphics-drivers (352.30-2) UNRELEASED; urgency=medium
+
+  [ Andreas Beckmann ]
+  * conftest.h:
+    - Reorder conftest.h to match conftest.sh.
+
+ -- Luca Boccassi <luca.boccassi@gmail.com>  Sun, 02 Aug 2015 23:25:01 +0100
+
 nvidia-graphics-drivers (352.30-1) experimental; urgency=medium
 
   [ Luca Boccassi ]
