--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ nvidia-graphics-drivers (352.30-2) UNRELEASED; urgency=medium
 
   [ Andreas Beckmann ]
   * conftest.h:
+    - Implement new conftest.sh function dma_map_ops (352.30).
     - Reorder conftest.h to match conftest.sh.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Sun, 02 Aug 2015 23:25:01 +0100
