--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,15 @@
-nvidia-graphics-drivers (352.30-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (352.30-3) UNRELEASED; urgency=medium
 
   [ Andreas Beckmann ]
   * conftest.h:
     - Implement new conftest.sh function dma_map_ops (352.30).
     - Reorder conftest.h to match conftest.sh.
 
- -- Luca Boccassi <luca.boccassi@gmail.com>  Sun, 02 Aug 2015 23:25:01 +0100
+  [ Luca Boccassi ]
+  * conftest.h:
+    - dma_map_ops and dma_ops are available for PPC and ARM too
+
+ -- Luca Boccassi <luca.boccassi@gmail.com>  Mon, 03 Aug 2015 00:06:07 +0100
 
 nvidia-graphics-drivers (352.30-1) experimental; urgency=medium
 
