--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (352.30-3) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (352.30-2) UNRELEASED; urgency=medium
 
   [ Andreas Beckmann ]
   * conftest.h:
@@ -8,8 +8,9 @@ nvidia-graphics-drivers (352.30-3) UNRELEASED; urgency=medium
   [ Luca Boccassi ]
   * conftest.h:
     - dma_map_ops and dma_ops are available for PPC and ARM too
+  * refresh uvm-symvers.patch (offset)
 
- -- Luca Boccassi <luca.boccassi@gmail.com>  Mon, 03 Aug 2015 00:06:07 +0100
+ -- Luca Boccassi <luca.boccassi@gmail.com>  Mon, 03 Aug 2015 00:09:18 +0100
 
 nvidia-graphics-drivers (352.30-1) experimental; urgency=medium
 
