--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ nvidia-graphics-drivers (352.30-2) UNRELEASED; urgency=medium
   * conftest.h:
     - dma_map_ops and dma_ops are available for PPC and ARM too
   * refresh uvm-symvers.patch (offset)
+  * Add include-swiotlb-header-on-arm.patch needed for dkms build on
+    armhf: swiotlb.h is necessary to use dma_ops and family
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Mon, 03 Aug 2015 00:09:18 +0100
 
