--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nvidia-graphics-drivers (340.76-4) UNRELEASED; urgency=medium
+
+  [ Luca Boccassi ]
+  * conftest.h:
+    - dma_map_ops and dma_ops are available for PPC and ARM too
+
+ -- Luca Boccassi <luca.boccassi@gmail.com>  Mon, 03 Aug 2015 22:14:40 +0100
+
 nvidia-graphics-drivers (340.76-3) unstable; urgency=medium
 
   [ Vincent Cheng ]
