--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ nvidia-graphics-drivers (340.76-4) UNRELEASED; urgency=medium
   * Overhaul arch-specific UVM support.
   * nvidia-detect: Add support for the upcoming nvidia-legacy-340xx-driver.
   * Rename nvidia-uvm.ko to nvidia-{current,legacy-*}.ko.
+  * README.source: Document my schroot setup for testing module compilation.
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 02 Aug 2015 23:20:48 +0200
 
