--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,11 @@ nvidia-graphics-drivers (352.30-2) UNRELEASED; urgency=medium
   * refresh uvm-symvers.patch (offset)
   * Add include-swiotlb-header-on-arm.patch needed for dkms build on
     armhf: swiotlb.h is necessary to use dma_ops and family
+  * Add ignore_xen_on_arm.patch needed for dkms build on armhf: armmp
+    kernel headers ship with CONFIG_XEN enabled, which breaks the build,
+    so since running this driver on XEN is currently not supported,
+    ignore the check for XEN in nv-linux.h as a workaround on arm.
+  * Update rules.def, armhf DKMS module builds on 4.0 and 4.1
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Mon, 03 Aug 2015 00:09:18 +0100
 
