--- a/debian/changelog
+++ b/debian/changelog
@@ -14,8 +14,9 @@ nvidia-graphics-drivers (352.30-2) UNRELEASED; urgency=medium
   * Add ignore_xen_on_arm.patch needed for dkms build on armhf: armmp
     kernel headers ship with CONFIG_XEN enabled, which breaks the build,
     so since running this driver on XEN is currently not supported,
-    ignore the check for XEN in nv-linux.h as a workaround on arm.
-  * Update rules.def, armhf DKMS module builds on 4.0 and 4.1
+    ignore the check for XEN in nv-linux.h as a workaround on arm, and
+    also disable CONFIG_XEN and CONFIG_XEN_DOM0 if building on <= 3.16.
+  * Update rules.def, armhf DKMS module builds on 3.16, 4.0 and 4.1.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Mon, 03 Aug 2015 00:09:18 +0100
 
