--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ nvidia-graphics-drivers (352.30-2) UNRELEASED; urgency=medium
     so since running this driver on XEN is currently not supported,
     ignore the check for XEN in nv-linux.h as a workaround on arm, and
     also disable CONFIG_XEN and CONFIG_XEN_DOM0 if building on <= 3.16.
+    (Closes: #794435)
   * Update rules.def, armhf DKMS module builds on 3.16, 4.0 and 4.1.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Mon, 03 Aug 2015 00:09:18 +0100
