--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,12 @@ nvidia-graphics-drivers (340.76-4) UNRELEASED; urgency=medium
   [ Luca Boccassi ]
   * conftest.h:
     - dma_map_ops and dma_ops are available for PPC and ARM too
+  * Add ignore_xen_on_arm.patch needed for dkms build on armhf: armmp
+    kernel headers ship with CONFIG_XEN enabled, which breaks the build,
+    so since running this driver on XEN is currently not supported,
+    ignore the check for XEN in nv-linux.h as a workaround on arm, and
+    also disable CONFIG_XEN and CONFIG_XEN_DOM0 if building on <= 3.16.
+    (Closes: #794435)
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Mon, 03 Aug 2015 22:14:40 +0100
 
