Document armhf setup in README.source
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5443 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,9 @@ nvidia-graphics-drivers (340.76-4) UNRELEASED; urgency=medium
   * Rename nvidia-uvm.ko to nvidia-{current,legacy-*}.ko.
   * README.source: Document my schroot setup for testing module compilation.
 
+  [ Luca Boccassi ]
+  * README.source: Document armhf setup for testing module compilation.
+
  -- Andreas Beckmann <anbe@debian.org>  Sun, 02 Aug 2015 23:20:48 +0200
 
 nvidia-graphics-drivers (340.76-3) unstable; urgency=medium
