--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 nvidia-graphics-drivers (340.76-4) UNRELEASED; urgency=medium
 
+  [ Andreas Beckmann ]
+  * README.source: Document my schroot setup for testing module compilation.
+
   [ Luca Boccassi ]
   * conftest.h:
     - dma_map_ops and dma_ops are available for PPC and ARM too
@@ -9,6 +12,7 @@ nvidia-graphics-drivers (340.76-4) UNRELEASED; urgency=medium
     ignore the check for XEN in nv-linux.h as a workaround on arm, and
     also disable CONFIG_XEN and CONFIG_XEN_DOM0 if building on <= 3.16.
     (Closes: #794435)
+  * README.source: Document armhf setup for testing module compilation.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Mon, 03 Aug 2015 22:14:40 +0100
 
