update lintian overrides
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340@5446 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ nvidia-graphics-drivers (340.76-4) unstable; urgency=medium
 
   [ Andreas Beckmann ]
   * README.source: Document my schroot setup for testing module compilation.
+  * Update lintian overrides.
 
   [ Luca Boccassi ]
   * conftest.h:
