--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,28 @@
+nvidia-graphics-drivers (340.93-1) UNRELEASED; urgency=medium
+
+  * New upstream release 340.93 (2015-09-01).
+    - Fixed a bug that caused the X server to crash if an OpenGL application
+      tried to allocate a drawable when GPU-accessible memory is exhausted.
+    - Fixed a bug that could cause an Xid error when terminating a video
+      playback application using the overlay presentation queue in VDPAU.
+    - Updated nvidia-installer to avoid recursing too deeply into kernel source
+      trees under/usr/lib/modules, mirroring an existing restriction on
+      recursion under /lib/modules.
+    - Fixed a rare deadlock condition when running applications that use OpenGL
+      in multiple threads on a Quadro GPU.
+    - Fixed a kernel memory leak that occurred when looping
+      hardware-accelerated video decoding with VDPAU on Maxwell-based GPUs.
+    - Fixed a bug that caused the X server to crash if a RandR 1.4 output
+      provided by a SinkOutput provider was selected as the primary output on
+      X.Org xserver 1.17 and higher.
+    - Fixed a bug that caused waiting on X Sync Fence objects in OpenGL to hang
+      indefinitely in some cases.
+    - Fixed a bug that prevented OpenGL from properly recovering from hardware
+      errors orsync object waits that had timed out.
+  * Removed fixes-for-kernel-4.0.0.patch, fixed upstream.
+
+ -- Luca Boccassi <luca.boccassi@gmail.com>  Sun, 06 Sep 2015 00:05:11 +0100
+
 nvidia-graphics-drivers (340.76-5) unstable; urgency=medium
 
   * Drop obsolete transitional package nvidia-glx.
