--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (304.128-1) UNRELEASED; urgency=medium
+
+  * New upstream legacy 304xx branch release 304.128 (2015-08-31).
+    * Improved compatibility with recent Linux kernels.
+
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 13 Sep 2015 23:34:49 +0200
+
 nvidia-graphics-drivers (304.125-1) wheezy; urgency=medium
 
   * New upstream legacy 304xx branch release 304.125 (2014-12-05).
