--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,7 @@ nvidia-graphics-drivers (340.93-1) UNRELEASED; urgency=medium
     - Fixed a bug that prevented OpenGL from properly recovering from
       hardware errors or sync object waits that had timed out.
     * Improved compatibility with recent Linux kernels.
+  * fixes-for-kernel-4.0.0.patch: Remove, fixed upstream.
 
  -- Andreas Beckmann <anbe@debian.org>  Mon, 14 Sep 2015 01:00:49 +0200
 
