--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,8 @@ nvidia-graphics-drivers (340.93-1) UNRELEASED; urgency=medium
       hardware errors or sync object waits that had timed out.
     * Improved compatibility with recent Linux kernels.
   * fixes-for-kernel-4.0.0.patch: Remove, fixed upstream.
+  * conftest.h:
+    - Implement new conftest.sh function nvidia_grid_build (352.41).
 
  -- Andreas Beckmann <anbe@debian.org>  Mon, 14 Sep 2015 01:00:49 +0200
 
