update lintian overrides
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340@5496 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,7 @@ nvidia-graphics-drivers (340.93-1) UNRELEASED; urgency=medium
   * fixes-for-kernel-4.0.0.patch: Remove, fixed upstream.
   * conftest.h:
     - Implement new conftest.sh function nvidia_grid_build (352.41).
+  * Update lintian overrides.
 
  -- Andreas Beckmann <anbe@debian.org>  Mon, 14 Sep 2015 01:00:49 +0200
 
