--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,7 @@ nvidia-graphics-drivers (340.93-1) UNRELEASED; urgency=medium
     Provides+Conflicts: $pkg-${nvidia:Version} to forbid co-installation with
     the respective legacy packages from the same upstream version due to file
     conflicts on versioned files.
+  * nvidia-driver: Add Recommends: nvidia-persistenced.
 
  -- Andreas Beckmann <anbe@debian.org>  Mon, 14 Sep 2015 01:00:49 +0200
 
