--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nvidia-graphics-drivers (340.93-2) UNRELEASED; urgency=medium
+
+  * nvidia-modprobe.conf: Don't use aliases for the renamed modules, only use
+    install and remove commands. Remodel the nvidia-uvm -> nvidia dependency
+    via an install command.  (Closes: #798207)
+
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 15 Sep 2015 13:23:48 +0200
+
 nvidia-graphics-drivers (340.93-1) unstable; urgency=medium
 
   * New upstream legacy 340xx branch release 340.93 (2015-09-02).
