--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ nvidia-graphics-drivers (340.93-2) UNRELEASED; urgency=medium
   * Drop instructions and debconf notes about manual xorg.conf creation - the
     driver now integrates with Xorg s.t. it is automatically used if
     available.  (Closes: #586502, #612093)
+  * Bump glx-alternative-nvidia dependency to (>= 0.6) for Xorg autoconfig.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 15 Sep 2015 13:23:48 +0200
 
