--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (340.93-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (340.93-2) unstable; urgency=medium
 
   * nvidia-modprobe.conf:  (Closes: #798207)
     - Don't use aliases for the renamed modules, only use install and remove
@@ -6,16 +6,17 @@ nvidia-graphics-drivers (340.93-2) UNRELEASED; urgency=medium
     - Remodel the nvidia-uvm -> nvidia dependency via an install command.
     - Duplicate the module's built-in PCI-ID-match aliases to ensure they
       cause the virtual "nvidia" module to be loaded instead of a random one.
-  * Drop instructions and debconf notes about manual xorg.conf creation - the
-    driver now integrates with Xorg s.t. it is automatically used if
-    available.  (Closes: #586502, #612093)
+  * Drop instructions and debconf notes about manual xorg.conf creation. The
+    driver now integrates with Xorg s.t. it is automatically detected and
+    loaded if selected as the glx alternative.  (Closes: #586502, #612093)
+  * Add NEWS entry about no longer requiring manual xorg.conf creation.
   * Bump glx-alternative-nvidia dependency to (>= 0.6) for Xorg autoconfig.
   * libgl1-nvidia-glx: Add Provides+Conflicts:
     libgl1-nvidia-glx-${nvidia:Version} to forbid co-installation of
     libgl1-nvidia-legacy-304xx-glx from the same upstream version due to file
     conflicts on versioned files that are not handled via alternatives.
 
- -- Andreas Beckmann <anbe@debian.org>  Tue, 15 Sep 2015 13:23:48 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 24 Sep 2015 04:38:22 +0200
 
 nvidia-graphics-drivers (340.93-1) unstable; urgency=medium
 
