document the permission issues
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5540 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ nvidia-graphics-drivers (340.93-3) UNRELEASED; urgency=medium
 
   * Revert glx-alternative-nvidia dependency to (>= 0.5) because Xorg
     autoconfig causes some permission issues (see: #799948).
+  * Document the permission issues.
 
  -- Andreas Beckmann <anbe@debian.org>  Thu, 01 Oct 2015 02:20:36 +0200
 
