--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (352.41-1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (352.41-1) experimental; urgency=medium
 
   [ Andreas Beckmann ]
   * New upstream long lived branch release 352.41 (2015-08-28).
@@ -30,7 +30,7 @@ nvidia-graphics-drivers (352.41-1) UNRELEASED; urgency=medium
   * Update rules.def, armhf DKMS module builds on 3.16, 4.0 and 4.1.
   * Update nv-readme.ids.
 
- -- Luca Boccassi <luca.boccassi@gmail.com>  Mon, 03 Aug 2015 00:09:18 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 01 Oct 2015 03:56:38 +0200
 
 nvidia-graphics-drivers (352.30-1) experimental; urgency=medium
 
