update lintian overrides
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5568 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (340.93-4) UNRELEASED; urgency=medium
+
+  * Update lintian overrides.
+
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 06 Oct 2015 10:18:28 +0200
+
 nvidia-graphics-drivers (340.93-3) unstable; urgency=medium
 
   * Revert glx-alternative-nvidia dependency to (>= 0.5) because Xorg
