change from symlink to actual file has to be done in 2 commits. Also commit the delete of no longer used files
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/355@5580 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -58,6 +58,7 @@ nvidia-graphics-drivers (355.11-1) UNRELEASED; urgency=medium
       debian/rules for new build system
     - Removed debian/module/Makefile, debian/module/conftest.sh
     - Modules build on 4.2, update rules.def
+    - debian/module/conftest/patches.h is no longer a symlink
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Sun, 04 Oct 2015 22:07:14 +0100
 
