--- a/debian/changelog
+++ b/debian/changelog
@@ -59,6 +59,8 @@ nvidia-graphics-drivers (355.11-1) UNRELEASED; urgency=medium
     - Removed debian/module/Makefile, debian/module/conftest.sh
     - Modules build on 4.2, update rules.def
     - debian/module/conftest/patches.h is no longer a symlink
+   * Added new libglvnd-nvidia package, dependency of new libEGL.so.1,
+     ships vendor-neutral GL libraries
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Sun, 04 Oct 2015 22:07:14 +0100
 
