Upstream now ships a full libEGL.so.1 implementation, update the package and add dependency to libglvnd-nvidia
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/355@5583 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -61,6 +61,7 @@ nvidia-graphics-drivers (355.11-1) UNRELEASED; urgency=medium
     - debian/module/conftest/patches.h is no longer a symlink
    * Added new libglvnd-nvidia package, dependency of new libEGL.so.1,
      ships vendor-neutral GL libraries
+   * Updated libegl1-nvidia, upstream now ships libEGL.so.1
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Sun, 04 Oct 2015 22:07:14 +0100
 
