Add new symbol to libgl1-nvidia-glx and libnvidia-eglcore
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/355@5584 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -62,6 +62,7 @@ nvidia-graphics-drivers (355.11-1) UNRELEASED; urgency=medium
    * Added new libglvnd-nvidia package, dependency of new libEGL.so.1,
      ships vendor-neutral GL libraries
    * Updated libegl1-nvidia, upstream now ships libEGL.so.1
+   * Updated libgl1-nvidia-glx and libnvidia-eglcore symbols
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Sun, 04 Oct 2015 22:07:14 +0100
 
