report device node permissions
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5599 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (340.93-4) UNRELEASED; urgency=medium
 
   * Update lintian overrides.
+  * bug-script: Report device node permissions.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 06 Oct 2015 10:18:28 +0200
 
